<resources>
    <string name="app_name" translatable="false">WaterVTE</string>
    <string name="text_french" translatable="false">Lao</string>
    <string name="text_english" translatable="false">English</string>
    <string name="admob_application_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_ads_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_ads_id" translatable="false">"ca-app-pub-3940256099942544/1033173712"</string>
    <string name="menuwater">APIS WaterBill</string>
    <string name="all_waterbill">ໃບຄ່ານ້ຳທັງໝົດ</string>
    <string name="edit_waterbill">ປ້ອນຂໍ້ມູນບິນຄ່ານ້ຳ</string>
    <string name="menuwater01">ລາຍການບິນແຈ້ງຄ່ານ້ຳ</string>
    <string name="menuwater02">ລາຍການໃບຮັບເງິນ</string>
    <string name="menuwater03">ລາຍງານບິນແຈ້ງຄ່ານ້ຳ</string>
    <string name="menuwater04">ສົ່ງຂໍ້ມູນບິນແຈ້ງຄ່ານ້ຳ</string>
    <string name="menuwater05">ດືງຂໍ້ມູນຂໍ້ມູນບິນແຈ້ງຄ່ານ້ຳ</string>
    <string name="menuwater06">ລະບົບຄວບຄຸມ</string>
    <string name="counter_no">ເລກບັນຊີ</string>
    <string name="search_district">ຄົ້ນຫາຕາມເມືອງ. . .</string>
    <string name="search_village">ຄົ້ນຫາຕາມບ້ານ. . .</string>
    <string name="search_account">ຄົ້ນຫາເລກບັນຊີ. . .</string>
    <string name="Load_successfully">ໂລດຂໍ້ມູນສຳເລັດ</string>
    <string name="water_Acc">ເລກບັນຊີ: </string>
    <string name="water_custname">ຊື່ຜູ້ນຳໃຊ້ນຳ້: </string>
    <string name="water_prvread">ເລກອ່ານຄັ້ງກ່ອນ: </string>
    <string name="water_prvdate">ວ/ທຈົດຄັ້ງກ່ອນ: </string>
    <string name="water_comsum">ບໍລິມາດນ້ຳໃຊ້: </string>
    <string name="water_total">ໜີ້ຄ້າງຈ່າຍ: </string>
    <string name="download">ດາວໂຫລດ...</string>
    <string name="upload">ສົ່ງຂໍ້ມູນ...</string>
    <string name="amontx">ຈຳນວນເງີນ: </string>
    <string name="Invoice">ລະຫັດໃບບີນ:</string>
    <string name="Water">ເລກໝໍ້ແທກນ້ຳ:</string>
    <string name="Amount">ຈຳນວນເງີນ:</string>
    <string name="receipt_list">ລາຍການໃບຮັບເງີນ</string>
    <string name="email">UserID</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="no_internet">Please, enable internet connection before using this app</string>
    <string name="action_settings">ຕັ້ງຄ່າ</string>
    <string name="products">products</string>
    <string name="suppliers">suppliers</string>
    <string name="customers">customers</string>
    <string name="pos">pos</string>
    <string name="expense">expense</string>
    <string name="report">ລາຍງານ</string>
    <string name="all_orders">ລາຍສັ່ງສິນຄ້າ</string>
    <string name="all_sales">ລາຍການທັງໝົດ</string>
    <string name="daily">ລາຍງານປະຈຳວັນ</string>
    <string name="monthly">ລາຍງານປະຈຳເດືອນ</string>
    <string name="yearly">ລາຍງານປະຈຳປີ</string>
    <string name="customer_name">customer name</string>
    <string name="customer_cell">Cellule client</string>
    <string name="customer_email">Client de messagerie</string>
    <string name="customer_address">Adresse du client</string>
    <string name="add_customer">Ajouter un client</string>
    <string name="enter_customer_name">Entrez le nom du client</string>
    <string name="enter_customer_cell">Entrez la cellule client</string>
    <string name="enter_customer_address">Entrez l\'adresse du client</string>
    <string name="customer_successfully_added">Client ajouté avec succès</string>
    <string name="all_customer">Tous les clients</string>
    <string name="no_customer_found">Aucun client trouvé!</string>
    <string name="all_suppliers">Tous les fournisseurs</string>
    <string name="no_suppliers_found">Aucun fournisseur trouvé!</string>
    <string name="add_suppliers">Ajouter des fournisseurs</string>
    <string name="enter_suppliers_name">Entrez le nom du fournisseur</string>
    <string name="enter_suppliers_contact_person_name">Entrez le nom de la personne-ressource des fournisseurs</string>
    <string name="enter_suppliers_cell">Entrez la cellule des fournisseurs</string>
    <string name="enter_valid_email">Entrez une adresse email valide</string>
    <string name="enter_suppliers_address">Entrez l\'adresse du fournisseur</string>
    <string name="suppliers_successfully_added">Fournisseurs ajoutés avec succès</string>
    <string name="failed">failed</string>
    <string name="product_name_cannot_be_empty">Le nom du produit ne peut pas être vide!</string>
    <string name="product_category_cannot_be_empty">La catégorie de produits ne peut pas être vide!</string>
    <string name="product_sell_price_cannot_be_empty">Le prix de vente du produit ne peut pas être vide!</string>
    <string name="product_stock_cannot_be_empty">Le stock de produits ne peut pas être vide!</string>
    <string name="product_supplier_cannot_be_empty">Le fournisseur de produits ne peut pas être vide!</string>
    <string name="product_weight_cannot_be_empty">Le poids du produit ne peut pas être vide!</string>
    <string name="product_successfully_added">Produit ajouté avec succès</string>
    <string name="something_went_wrong">Quelque chose a mal tourné</string>
    <string name="add_product">Ajouter un produit</string>
    <string name="product_details">détails du produit</string>
    <string name="product_code">Code produit</string>
    <string name="product_description">Description du produit</string>
    <string name="unit_product_sell_price">Prix ​​de vente du produit unitaire</string>
    <string name="product_sell_price">Prix ​​de vente du produit</string>
    <string name="product_stock">Stock de produits</string>
    <string name="product_weight">Poids du produit</string>
    <string name="select_product_weight_unit">Sélectionnez l\'unité de poids du produit</string>
    <string name="product_weight_unit">Unité de poids du produit</string>
    <string name="select_supplier">Sélectionnez un fournisseur</string>
    <string name="product_supplier">Fournisseur de produits</string>
    <string name="choose_product_image">Choisissez l\'image du produit</string>
    <string name="database_backup">ສຳຮອງຂໍ້ມູນ</string>
    <string name="database_import">ກູ້ຂໍ້ມູນຄືນ</string>
    <string name="year_2020">year 2021</string>
    <string name="total_sales">ຈຳນວນທັງໝົດ : </string>
    <string name="search_here">ຄົ້ນຫາ..</string>
    <string name="no_order_found">ບໍ່ມີຂໍ້ມູນ</string>
    <string name="no_product_found">ບໍ່ມີຂໍ້ມູນ</string>
    <string name="submit_order">ບັນທຶກລາຍການ</string>
    <string name="all_sales_report">ລາຍການຂໍ້ມູນເກັບຄ່ານຳ້</string>
    <string name="all_expense_report">ລາຍການບິນເກັບເງິນຄ່ານ້ຳ</string>
    <string name="monthly_sales_graph">ລາຍງານຂໍ້ມູນການເກັບຄ່ານ້ຳ</string>
    <string name="monthly_expense_graph">ເອີ້ນຂໍ້ມູນຈາກ Server</string>
    <string name="no_data_found">ບໍ່ມີຂໍ້ມູນ</string>
    <string name="shop_information">ຂໍ້ມູນສຳນັກງານ</string>
    <string name="data_backup">ສຳຮອງຂໍ້ມູນ</string>
    <string name="shop_name">ຊື່ສຳນັກງານ</string>
    <string name="shop_contact_number">ຂໍ້ມູນຕິດຕໍ່</string>
    <string name="shop_email">Email</string>
    <string name="shop_address">ທີ່ຢູ່ສຳນັກງານ</string>
    <string name="currency_symbol">ສັນຍາລັກສະກຸນເງິນ</string>
    <string name="shop_currency">ສະກຸນເງິນ</string>
    <string name="edit">ແກ້ໄຂ</string>
    <string name="update_information">ບັນທຶກ</string>
    <string name="product_category">ປະເພດ</string>
    <string name="cancel">ຍົກເລີກ</string>
    <string name="payment">ການຊຳລະ</string>
    <string name="submit">ບັນທຶກ</string>
    <string name="add_to_cart">ເພີມລາຍການ</string>
    <string name="product_name">product name</string>
    <string name="weight">ນ້ຳໜັກ:</string>
    <string name="price">ລາຄາ</string>
    <string name="water_bill_acc">ເລກບັນຊີຜູ້ໃຊ້ນ້ຳ</string>
    <string name="water_bill_no">ລະຫັດຜູ້ໃຊ້ນ້ຳ</string>
    <string name="water_bill_name">ຊື່ຜູ້ໃຊ້ນຳ</string>
    <string name="water_bill_type">ປະພດລູກຄ້າ</string>
    <string name="water_bill_vread">ເລກຄັ້ງກ່ອນ</string>
    <string name="water_bill_sread">ເລກຄັ້ງນີ້</string>
    <string name="water_bill_consum">ບໍລິມາດນ້ຳ</string>
    <string name="water_bill_Deviation">ຄ່າຜິດດ່ຽງ</string>
    <string name="water_bill_detive">ຄ່າສະເລ່ຍ</string>
    <string name="water_bill_amt">ຄ່ານ້ຳ</string>
    <string name="water_bill_Mret">ຄ່າເຊົ່າ</string>
    <string name="water_bill_SEWER">ຄ່ານ້ຳເປື້ອນ</string>
    <string name="water_bill_tax">ອາກອນ</string>
    <string name="water_bill_Box4">ລາຍຈ່າຍເພີ່ມ</string>
    <string name="water_bill_TotalBill">ລວມມູນຄ່າ</string>
    <string name="water_bill_Due">ໜີ້ສິນຄ້າງຈ່າຍ</string>
    <string name="water_bill_Total">ລວມເງິນຕ້ອງຈ່າຍ</string>
    <string name="successfully_load" translatable="false">successfully</string>
    <string name="Bills">ໃບບີນ</string>
    <string name="textbills">ລັດວິສາຫະກິດນ້ຳປະປາ ແຂວງບໍລິຄຳໄຊ</string>
    <string name="saka">ສາຂາ:</string>
    <string name="Branches">ສີສັດຕະນາກ</string>
    <string name="teld">ໂທລະສັບ:</string>
    <string name="tels">054-212513</string>
    <string name="payments">(ໃບບີນຮັບເງີນ/Payment Receipt)</string>
    <string name="firstname">ຊື່:</string>
    <string name="firstnames">ຊື່</string>
    <string name="Address">ທີຢູ່:</string>
    <string name="Addresse">ທີຢູ່</string>
    <string name="Accountnumber">ເລກບັນຊີ</string>
    <string name="Water_user">ເລກຜູ້ໃຊ້ນ້ຳ</string>
    <string name="Invoice_code">ລະຫັດໃບບີນ</string>
    <string name="Water_meter">ເລກໝໍ້ແທກນໍ້ຳ</string>
    <string name="Recipient">ຜູ້ຮັບເງີນ</string>
    <string name="water_meters">ນໍ້າມີຄຸນຄ່າ ພວກເຮົາທຸກຄົນ ຄວນຊ່ວຍກັນປົກປັກຮັກສາ</string>
    <string name="Payment_date">ວັນທີສຳລະ</string>
    <string name="Payment">ການຊຳລະ</string>
    <string name="Amount_of_money">ຈຳນວນເງີນ</string>
    <string name="Payee_list">ລາຍເຊັ້ນຜູ້ຈ່າຍເງີນ</string>
    <string name="Recipient_list">ລາຍເຊັ້ນຜູ້ຮັບເງີນ</string>
    <string name="Water_bills">ລາຍເຊັ້ນຜູ້ຮັບເງີນ</string>
    <string name="month_bills">ບີນເດືອນ:</string>
    <string name="dates">03/2020</string>
    <string name="No_bills">ເລກທີບີນ:</string>
    <string name="NOcode">4141025032020</string>
    <string name="water_billse">(ໃບບີນແຈ້ງຄ່ານ້ຳປະປາ)</string>
    <string name="water_users">ຊື່ຜູ້ໃຊ້ນ້ຳ:</string>
    <string name="Typeof_user">ປະເພດຜູ້ນຳໃຊ້:</string>
    <string name="Previousentrydate">ວັນທີຈົດຄັ້ງກ່ອນ:</string>
    <string name="Dateofthisentry">ວັນທີຈົດຄັ້ງນີ້:</string>
    <string name="Subdivisions">ອານຸເຂດ:</string>
    <string name="read_last">ເລກອ່ານຄັ້ງກ່ອນ:</string>
    <string name="NoReadthistime">ເລກອ່ານຄັ້ງກ່ອນ:</string>
    <string name="Watermeasurementnumber">ເລກໝໍ່ແທກນ້ຳ:</string>
    <string name="Volumeofwaterused">ບໍລີມາດນ້ຳໃຊ້:</string>
    <string name="Description">ລາຍລະອຽດ</string>
    <string name="Volume">ບໍລີມາດ</string>
    <string name="Price">ລາຄາ</string>
    <string name="Money">ເງີນຄ່ານ້ຳ</string>
    <string name="unit_product_buy_price"> unit_product_buy_price </string>
    <string name="supplier_name">supplier_name</string>
    <string name="supplier_contact_person">supplier_contact_person</string>
    <string name="supplier_cell">supplier_cell</string>
    <string name="supplier_email">Courriel du fournisseur</string>
    <string name="supplier_address">Adresse du fournisseur</string>
    <string name="add_supplier">Ajouter un fournisseur</string>
    <string name="monthly_expense_in_graph">Dépenses mensuelles dans le graphique</string>
    <string name="year">An</string>
    <string name="monthly_expense_report">Rapport des dépenses mensuelles</string>
    <string name="total_expense">Dépense totale: </string>
    <string name="monthly_sales_report">Rapport mensuel des ventes</string>
    <string name="all_expense">Tous les frais</string>
    <string name="shop_name_cannot_be_empty">Le nom de la boutique ne peut pas être vide</string>
</resources>