<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView

            android:textSize="18dp"
            android:layout_marginLeft="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ເລືອກເມືອງ"
            android:fontFamily="@font/notosanslaoui_regular"/>

        <EditText
            android:id="@+id/etxt_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/round_border"
            android:ems="10"
            android:focusable="false"
            android:fontFamily="@font/notosanslaoui_regular"
            android:drawableRight="@drawable/ic_search"
            android:hint="@string/search_district"
            android:inputType="textPersonName"
            android:padding="15dp" />
        <TextView

            android:textSize="18dp"
            android:layout_marginLeft="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ເລືອກບ້ານ"
            android:fontFamily="@font/notosanslaoui_regular"/>
        <EditText
            android:id="@+id/etxt_village"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/round_border"
            android:ems="10"
            android:focusable="false"
            android:fontFamily="@font/notosanslaoui_regular"
            android:drawableRight="@drawable/ic_search"
            android:hint="@string/search_village"
            android:inputType="textPersonName"
            android:padding="15dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:drawableRight="@drawable/ic_search"
                android:id="@+id/etxt_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_border"
                android:fontFamily="@font/notosanslaoui_regular"
                android:hint="@string/search_account"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/img_scan_code"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/barcode" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/product_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="?android:attr/selectableItemBackground">

        </androidx.recyclerview.widget.RecyclerView>

        <ImageView
            android:id="@+id/image_no_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</RelativeLayout>